--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,6 +47,13 @@
 :root {
   scroll-behavior: smooth;
 }
+img {
+  width: 100vw;
+  height: 100vh;
+  object-fit: contain;
+  background-color: #000; /* Optional: Adds a background color for empty space */
+}
+
 
 /*--------------------------------------------------------------
 # General Styling & Shared Classes
@@ -60,7 +67,7 @@ body {
       height: 100%;
       overflow: hidden; /* Prevent scrolling */
       color:black;
-   overflow: auto; 
+       overflow: auto; 
 }
 
 a {
