--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,6 +81,71 @@ a:hover {
   text-decoration: none;
 }
 
+.download-container {
+  display: flex;
+  justify-content: left;
+  margin-top: 20px;
+}
+
+.dl-button {
+  display: inline-block;
+  padding: 15px 35px;
+  background: linear-gradient(145deg, #1a1a1a, #010100, #b0f20f); 
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 12px;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  width: 200px;
+  text-align: center;
+  transition: background 0.3s, transform 0.2s;
+  box-shadow: 0px 4px 10px rgba(185, 242, 255, 0.5); /* Diamond glow */
+}
+
+.dl-button:hover {
+  background: linear-gradient(145deg, #444, #b9f2ff, #ffffff);
+  transform: scale(1.08);
+}
+
+.am {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 4px;
+  background: linear-gradient(90deg, #b9f2ff, #ffffff);
+  transition: width 3s linear;
+}
+
+.downloading .button-text {
+  opacity: 0.6;
+}
+
+.downloading .progress-bar {
+  width: 100%;
+}
+
+/* Shining Effect */
+.shine {
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.2);
+  transform: skewX(-45deg);
+  transition: left 1.5s ease-in-out;
+}
+
+.dl-button:hover .shine {
+  left: 100%;
+}
+
+
 h1,
 h2,
 h4,
