--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,7 +124,7 @@ a:hover {
             border-radius: 50%;
         }
 
-        .cv-button span {
+        .cv-text {
             display: inline-flex;
             align-items: center;
             gap: 1rem;
@@ -133,6 +133,23 @@ a:hover {
             letter-spacing: 0.025em;
             transition: color 0.32s ease-in-out;
         }
+        
+        .cv-progress {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background: var(--color-dark);
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 2s ease-in-out;
+        }
+
+        .cv-button:hover .cv-progress {
+            transform: scaleX(1);
+        }
+
 h1,
 h2,
 h4,
